[package]
name = "rust-ray-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gif = "0.12.0"
image = "0.23"
rayon = "1.7.0"
rand = "0.8.5"
fastrand = "1.9"
wgpu = "0.15"
pollster = "0.2"
bytemuck = { version = "1.12", features = ["derive"] }
